2005-07-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc.5: clarify documentation to lighten the requirement of 
	BUILDUSERID

2005-07-10  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1: 
	* pdebuild-user-mode-linux.1: 
	* pdebuild.1: 
	* pbuilder.8: use \- for dash.

2005-07-03  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.sh (RESULTFILE): remove vmstat and iostat. I don't really need them; 
	and add test for etch.

	* debian/TODO: add TODO

2005-07-02  Junichi Uekawa  <dancer@debian.org>

	* testsuite/run-test.log: failure to run pdebuild-internal-sid-dsh 
	  is correct; until fixed pbuilder is in archive proper, it 
	  will fail.

	* debian/changelog: prepare for release.

	* debian/TODO: updated todo list.

	* pdebuild-internal: add missing --force-yes to pbuilder install.

2005-06-25  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: use configured PATH instead of hard-coded PATH.

	* pbuilder-buildpackage: preserve PATH in su,
	pass -p option. This fixes the problem with env-var preservation.

2005-06-20  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc: set PATH in the configuration file.
	* pbuilder-buildpackage: do not set PATH inside pbuilder-buildpackage

2005-06-12  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-uml-checkparams: add --othermirror option to uml.

	* pbuilder-user-mode-linux.1: add othermirror documentation.

	* pbuilderrc.5: synchronize --othermirror documentation.
	* pbuilder.8: 

	* testsuite/test-pdebuild.sh: add a sample command-line that should
	work.

	* pbuilder-modules (pbuilder-options): 
	find '-xdev' is an option, not an evaluation, and so moved it around
	since newer find now complains.
	Marc Dequènes (Duck) <Duck@DuckCorp.org> and "Artur R. Czechowski" <arturcz@hell.pl>
	#312913

2005-06-08  Junichi Uekawa  <dancer@debian.org>

	* pbuildd/install-test.sh: imported from pbuilder-buildd tree.

2005-06-05  Junichi Uekawa  <dancer@debian.org>

	* debuild-pbuilder.1: 