@@ -954,6 +954,11 @@ $ sudo pbuilder update --hookdir ~/loginhooks/E10shell
       <para>
 	This is not a problem when using User-mode-linux.
       </para>
+      <para>
+	See <ulink url="http://bugs.debian.org/316135">
+	  316135
+	</ulink> for example.
+      </para>
     </sect1>
     <sect1 id="faqslowpbuilder">
       <title>pbuilder is slow</title>
