@@ -1,3 +1,8 @@
+2005-07-13  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: added a reference 
+	to bug 316135
+
 2005-07-11  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilderrc.5: clarify documentation to lighten the requirement of 
